Fix page height on mobile

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -41,7 +41,7 @@ html,
 body,
 #app {
   overflow: hidden;
-  height: 100%;
+  height: 100vh;
 }
 
 :focus {
